[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyrssa"
version = "1.0.0"
authors = [
  { name="Fleyderer", email="fleyderer@gmail.com" },
]
description = "Rssa"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Fleyderer/pyrssa"
"Bug Tracker" = "https://github.com/Fleyderer/pyrssa/issues"